Refactor separators; Build rows in thirds; Finish career page

--- a/templates/careers/index.html
+++ b/templates/careers/index.html
@@ -9,4 +9,19 @@
 
   {% include '/partials/_media-blocks' %}
 
+    <div class="row -single margin-top">
+    <div class="row-block">
+      <div class="module text-module text-black background-white">
+        <h3 class="font-h1">Interested?</h3>
+        <div class="buttons">
+          <a href="https://domestic-aeieng.icims.com/" class="button">
+            <span class="border"></span><span class="extra-corners"></span>
+            Search Jobs
+            <svg class="icon icon-right-arrow"><use xlink:href="#icon-right-arrow" /></svg>
+          </a>
+        </div>
+      </div>
+    </div>
+  </div>
+
 {% endblock %}
