--- a/templates/impact/_article.html
+++ b/templates/impact/_article.html
@@ -1,4 +1,4 @@
-<article class="module post-module no-underline pad">
+<article class="module post-module no-underline">
   {% set impactType = post.impactType[0] ?? null %}
   {% if impactType %}
     <div class="category font-details">{{ impactType }}</div>
