--- a/web/assets/scss/components/_articles.scss
+++ b/web/assets/scss/components/_articles.scss
@@ -69,6 +69,9 @@
 
 // Post Articles
 .post-module {
+  position: relative;
+  padding: $padding $padding ($padding+36px);
+
   .category {
     color: $red;
   }
@@ -77,6 +80,10 @@
   }
   .excerpt {
     margin: 4.5*$beat 0 5.5*$beat;
+  }
+  .button {
+    position: absolute;
+    bottom: $padding;
   }
 }
 
