--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -30,6 +30,8 @@ $ease: ease-out;
 $breakpoint-sm: 480px;
 $breakpoint-md: 750px;
 $breakpoint-lg: 1200px;
+$breakpoint-thirds-2col: 600px;
+$breakpoint-thirds-3col: 900px;
 $breakpoint-quarters-2col: 550px;
 $breakpoint-quarters-4col: 900px;
 $breakpoint-meta: 800px;
