--- a/templates/careers/index.html
+++ b/templates/careers/index.html
@@ -11,7 +11,7 @@
 
     <div class="row -single margin-top">
     <div class="row-block">
-      <div class="module text-module text-black background-white">
+      <div class="module text-module  ">
         <h3 class="font-h1">Interested?</h3>
         <div class="buttons">
           <a href="https://domestic-aeieng.icims.com/" class="button">
