--- a/templates/expertise/index.html
+++ b/templates/expertise/index.html
@@ -65,7 +65,7 @@ First we determin which. #}
 
 {# For clarity/DRY sake, save the intro module to a variable. #}
 {% set introModule %}
-  <div class="module text-module background-white text-black">
+  <div class="module text-module">
     <div class="font-h1 user-content">{{ subheader }}</div>
     {% if category is not defined %}
       <div class="buttons">
