--- a/templates/impact/index.html
+++ b/templates/impact/index.html
@@ -65,7 +65,7 @@
 
   <ul class="row -halves -separators semantic-only-list">
     {% for post in impactEntries %}
-      <li class="row-block background-white text-black separate">
+      <li class="row-block   separate">
         {% include 'impact/_article' %}
       </li>
     {% endfor %}
