--- a/templates/offices/_entry.html
+++ b/templates/offices/_entry.html
@@ -27,7 +27,7 @@
         </div>
       </div>
       <div class="row-block">
-        <div class="meta background-white text-black">
+        <div class="meta  ">
           {% if entry.officeAddress1 %}
             <div class="meta-item -full">
               <h3>Address</h3>
