--- a/templates/partials/_related-projects.html
+++ b/templates/partials/_related-projects.html
@@ -1,7 +1,7 @@
 {% if relatedProjects|length %}
   <div class="row -single margin-top">
     <div class="row-block">
-      <div class="module text-module text-black">
+      <div class="module text-module ">
         <h2 class="font-h2">{{ relatedProjectsTitle ?? 'Related Projects' }}</h2>
       </div>
     </div>
