--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="row-block">
-        <div class="meta background-white text-black">
+        <div class="meta  ">
           {% if entry.phoneNumber %}
             <div class="meta-item -half {% set nHalf = nHalf ?? 0 + 1  %}{{ cycle (['-row-end',''], nHalf) }}">
               <h3>Phone</h3>
