--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -48,7 +48,7 @@
   <!-- header w/ stat -->
   <div class="row -halves">
     <div class="row-block pull-to-top-h1">
-      <div class="module text-module background-white text-black">
+      <div class="module text-module  ">
         <div class="font-h1 user-content">{{ subheader }}</div>
         <div class="buttons">
           <a class="button" href="/careers/">
