--- a/templates/impact/_entry.html
+++ b/templates/impact/_entry.html
@@ -33,7 +33,7 @@
         </div>
       </div>
       <div class="row-block">
-        <div class="meta background-white text-black">
+        <div class="meta  ">
           {% if impactType.slug == 'conferences-presentations' %}
             <div class="meta-item -half {% set nHalf = nHalf ?? 0 + 1  %}{{ cycle (['-row-end',''], nHalf) }}">
               <h3>Session</h3>
