--- a/templates/index.html
+++ b/templates/index.html
@@ -74,7 +74,7 @@
 
         <ul class="row -halves -separators semantic-only-list">
           {% for post in block.impactPosts.all() %}
-            <li class="row-block background-white text-black separate">
+            <li class="row-block   separate">
               {% include 'impact/_article' %}
             </li>
           {% endfor %}
