--- a/templates/partials/_related-impact.html
+++ b/templates/partials/_related-impact.html
@@ -1,14 +1,14 @@
 {% if relatedPosts|length %}
   <div class="row -single margin-top">
     <div class="row-block">
-      <div class="module text-module text-black">
+      <div class="module text-module ">
         <h3 class="font-h2">{{ relatedPostsTitle ?? 'Related Impact' }}</h3>
       </div>
     </div>
   </div>
   <ul class="row -halves -separators semantic-only-list hr-top-off-white hr-bottom-off-white margin-bottom">
     {% for post in relatedPosts %}
-      <li class="row-block background-white text-black separate">
+      <li class="row-block   separate">
         {% include 'impact/_article' %}
       </li>
     {% endfor %}
