--- a/templates/people/_article.html
+++ b/templates/people/_article.html
@@ -1,6 +1,6 @@
 {% set personImage = person.personImage[0] ?? null %}
 
-<article class="module person-module background-white text-black zoom-hover bigclicky">
+<article class="module person-module   zoom-hover bigclicky">
   <div class="image-wrap -square">
     {% if personImage %}
       <div class="project-image lazy image" style="background-image: url('');" data-original="{{ personImage.getUrl('thumb') }}"></div>
