very basic search modal behavior + styling; pull search results dynamically; show "no results" if no posts or services found

--- a/templates/_layout.html
+++ b/templates/_layout.html
@@ -68,6 +68,7 @@
         {% include '/partials/_footer' %}
       </div>
     </div>
-    
+
+    <div class="search-modal"></div>
   </body>
 </html>
