Style contact modal

--- a/templates/careers/index.html
+++ b/templates/careers/index.html
@@ -9,7 +9,7 @@
 
   {% include '/partials/_media-blocks' %}
 
-    <div class="row -single margin-top">
+    <div class="row -single big-margin-vertical">
     <div class="row-block">
       <div class="module text-module  ">
         <h3 class="font-h1">Interested?</h3>
