--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -36,6 +36,7 @@
 @import "components/meta";
 @import "components/user-content";
 @import "components/theater";
+@import "components/contact-modal";
 
 // Pages
 @import "pages/pages";
