--- a/web/assets/scss/components/_base.scss
+++ b/web/assets/scss/components/_base.scss
@@ -4,7 +4,6 @@
 }
 
 html {
-  height: 100%;
   min-width: 320px;
   box-sizing: border-box;
 }
@@ -12,8 +11,8 @@ html {
 body {
   color: $black;
   @include font-p;
-  min-height: 100%;
   background: $white;
+  position: relative;
 }
 
 a {
