--- a/web/assets/scss/components/_nav.scss
+++ b/web/assets/scss/components/_nav.scss
@@ -31,8 +31,8 @@
 
   .search-open {
     z-index: 1;
-    top: $padding;
-    left: $padding;
+    top: $padding - 2*$beat;
+    left: $padding - 2*$beat;
     position: absolute;
   }
 
@@ -171,18 +171,7 @@
   }
 }
 
-.search-open {
-  @include font-buttons;
 
-  .icon-search {
-    top: 3px;
-    fill: $black;
-    width: 10.5px;
-    height: 10.5px;
-    margin-left: $beat;
-    position: relative;
-  }
-}
 
 .nav-close {
   top: 0;
@@ -243,7 +232,7 @@
   transform-origin: 100% 0%;
   transform: rotate(-90deg);
   transition: opacity 0.2s $ease;
-  
+
   a.close-filter {
     position: absolute;
     top: 0;
