--- a/web/assets/scss/main.scss
+++ b/web/assets/scss/main.scss
@@ -37,6 +37,7 @@
 @import "components/user-content";
 @import "components/theater";
 @import "components/contact-modal";
+@import "components/search";
 
 // Pages
 @import "pages/pages";
