--- a/web/assets/scss/components/_forms.scss
+++ b/web/assets/scss/components/_forms.scss
@@ -62,7 +62,7 @@
   text-align: left;
   position: relative;
   text-decoration: none;
-  padding: 11px 6*$beat 11px 11px;
+  padding: 11px 7*$beat 11px 11px;
   @include outline-cornerize($black, $white);
 
   &:hover {
@@ -89,6 +89,13 @@
     width: 7px;
     right: 20px;
     height: 7px;
+  }
+
+  .icon-search {
+    top: 14px;
+    width: 10.3px;
+    right: 16px;
+    height: 10.3px;
   }
 
   .icon-right-arrow {
