Make x icon more visible for videos

--- a/web/assets/scss/components/_theater.scss
+++ b/web/assets/scss/components/_theater.scss
@@ -16,12 +16,12 @@
     right: 0;
     z-index: 2;
     opacity: 0;
-    fill: $black;
+    fill: $white;
     position: absolute;
     padding: $padding/2;
 
     &:hover {
-      fill: $white;
+      fill: $concrete-med;
     }
 
     .icon {
