update syntax for craft.app.request.isLivePreview

--- a/templates/people/index.html
+++ b/templates/people/index.html
@@ -1,6 +1,6 @@
 {% set bodyClass = 'white-header' %}
 
-{% extends (craft.app.request.isAjax and not craft.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
+{% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 
 {% if category is defined %}
 
