--- a/templates/people/_entry.html
+++ b/templates/people/_entry.html
@@ -1,4 +1,4 @@
-{% extends (craft.app.request.isAjax and not craft.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
+{% extends (craft.app.request.isAjax and not craft.app.request.isLivePreview) ? "_ajax-layout" : "_layout" %}
 {% set bodyClass = 'overlapping-header' %}
 {% set title = entry.title %}
 {% set personType = entry.personType.one() %}
