Fix contact modal positioning bug. Reverse nav colors;

--- a/templates/expertise/index.html
+++ b/templates/expertise/index.html
@@ -146,7 +146,7 @@ First we determin which. #}
 
     {# Top row: project text and first project (wrapped so they can visually align) #}
     <div class="row -halves">
-      <div class="row-block pull-to-top-h1">
+      <div class="row-block intro-block pull-to-top-h1">
         {{ introModule }}
       </div>
       {% set project = projectEntries ? projectEntries[0] : false %}
