--- a/web/assets/scss/pages/_pages.scss
+++ b/web/assets/scss/pages/_pages.scss
@@ -7,6 +7,11 @@
 }
 
 .page-expertise {
+
+  .intro-block {
+    position: relative;
+  }
+
   .masonry-grid {
     .intro-block {
       @include media-md {
